orgstrap.org work toward edit, init, install functionality
turns out that there is an inconsistency in how org-bable is
implemented which means that org-check-babel-eval is given the
unexpanded forms of a block for validation, which is is
... problematic to say the least, it needs a patch in upstream and as
a result I have had to add a workaround for the situation which more
than doubles the code needed in local variables

there are still bugs associated with this because the unexpanded vs
expanded was breaking the ability to test things

one very important thing has only be partially fixed through the file
which is that org-check-babel-evaluate induces checks by returning
not-nil values, so we have to negate the expression we are using to
get checks when blocks mismatch

--- a/orgstrap-minimal.org
+++ b/orgstrap-minimal.org
@@ -9,7 +9,7 @@
 =orgstrap= a plain-text executable format.
 
 # Local Variables:
-# eval: (defun orgstrap--confirm-eval (lang body) (and (member lang '("elisp" "emacs-lisp")) (equal (secure-hash 'sha256 (pp (read (concat "(progn" body ")")))) orgstrap-block-checksum)))
+# eval: (defun orgstrap--confirm-eval (lang body) (and (member lang '("elisp" "emacs-lisp")) (equal (secure-hash orgstrap-cypher (pp (read (concat "(progn\n" body "\n)")))) orgstrap-block-checksum)))
 # eval: (setq-local org-confirm-babel-evaluate #'orgstrap--confirm-eval)
 # eval: (save-excursion (org-babel-goto-named-src-block "orgstrap") (org-babel-execute-src-block))
 # eval: (setq-local org-confirm-babel-evaluate t)
